--- a/package.json
+++ b/package.json
@@ -9,15 +9,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@shyft-to/js": "^0.2.13",
+    "@solana/wallet-adapter-base": "^0.9.22",
+    "@solana/wallet-adapter-react": "^0.15.32",
+    "@solana/wallet-adapter-react-ui": "^0.9.31",
+    "@solana/wallet-adapter-wallets": "^0.19.16",
+    "@solana/web3.js": "^1.77.3",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
     "@trpc/client": "^10.26.0",
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "firebase": "^9.22.1",
+    "firebase-admin": "^11.9.0",
+    "lodash": "^4.17.21",
     "next": "^13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.4.1",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
